# Palette-app-demo

./: README  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/composetuturial/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt
app/src/main/java/com/example/composetuturial/: MainActivity.kt
app/src/main/java/com/example/composetuturial/ui/theme/: Color.kt  Theme.kt  Type.kt
app/src/main/palette/: CMakeLists.txt  palette.cpp
app/src/main/palette/monet/: CMakeLists.txt
app/src/main/palette/monet/include/blend/: blend.cc  blend.h
app/src/main/palette/monet/include/cam/: cam.cc  cam.h  hct.cc  hct_solver.cc  viewing_conditions.cc
app/src/main/palette/monet/include/palettes/: core.cc  core.h  tones.cc  tones.h
app/src/main/palette/monet/include/scheme/: scheme.cc  scheme.h
app/src/main/palette/monet/include/utils/: utils.cc
app/src/main/res/values/: strings.xml  themes.xml
app/src/test/java/com/example/composetuturial/: ExampleUnitTest.kt
gradle/wrapper/: gradle-wrapper.properties
